--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 
 .logo {
     font-size: 24px;
+    font-weight: bold;
 }
 
 ul {
@@ -75,5 +76,46 @@ img {
     height: 220px;
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+
+.info-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 100px;
+    margin-top: 50px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.box {
+    width: 165px;
+    height: 165px;
+    border: 4px solid #3882F6;
+    border-radius: 10px;
+}
+
+.subtext {
+    max-width: 165px;
+    text-align: center;
+    margin-top: 10px;
+    color: rgb(94, 94, 100);
+}
+
+.title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin: 30px;
+}
+
+.container div {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
