--- a/styles.css
+++ b/styles.css
@@ -146,3 +146,33 @@ img {
     font-style: normal;
     font-weight: bold;
 }
+
+.call-section {
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.window {
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 30px;
+    width: 900px;
+    display: flex;
+    justify-content: space-around;
+    color: white;
+    align-items: center;
+}
+
+.window-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.call-section button {
+    border: 2px solid white;
+    width: 100px;
+    height: 40px;
+}
