--- a/styles.css
+++ b/styles.css
@@ -176,3 +176,14 @@ img {
     width: 100px;
     height: 40px;
 }
+
+.footer {
+    background-color: #1F2937;
+    height: 72px;
+    margin: -8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    
+}
